# esql-groceries

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml
groceries/: admin.py  models.py  serializers.py  urls.py  views.py
groceries/migrations/: 0001_initial.py
groceries_project/: .env  asgi.py  settings.py  urls.py  wsgi.py
